# textinator

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  mocker.rs  texinator.rs
src/subcommands/: mock.rs  mod.rs  morse.rs  reverse.rs
src/textinator/: builder_macro.rs  default.rs  mock.rs  mod.rs  morse.rs  reverse.rs  textinator.rs
