[package]
name = "textinator"
version = "0.1.3"
edition = "2021"
authors = ["fruit-bird"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
arboard = "3.2.0"
clap = { version = "4.0.30", features = ["cargo", "derive"] }
rand = "0.8.5"
text_converter = "0.1.0"
thiserror = "1.0.38"
