[package]
name = "textinator"
version = "0.2.0"
edition = "2021"
authors = ["fruit-bird"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.2.0"
clap = { version = "4.0.30", features = ["derive"] }
rand = "0.8.5"
text_converter = "0.1.0"
